Add changes in src/js/script.js

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "license": "ISC",
     "devDependencies": {
         "autoprefixer": "^10.2.4",
+        "babel-eslint": "^10.1.0",
         "browser-sync": "^2.26.3",
         "copyfiles": "^2.1.0",
         "eslint": "^5.14.1",
