--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,9 +4,11 @@
         "es6": true
     },
     "extends": "eslint:recommended",
+    "parser": "babel-eslint",
     "parserOptions": {
         "ecmaVersion": 2015,
         "sourceType": "module"
+
     },
     "rules": {
         "indent": [
