--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,12 +11,12 @@
 
     },
     "rules": {
-        "indent": [
-            "error",
-            2
-        ],
+        "no-unused-vars" : ["error", {"vars": "all", "args": "after-used", "ignoreRestSiblings": false}]
+    },
+
         "linebreak-style": [
             "off"
+
         ],
         "quotes": [
             "error",
