Add new changes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,8 +11,10 @@
 
     },
     "rules": {
-        "no-unused-vars" : ["error", {"vars": "all", "args": "after-used", "ignoreRestSiblings": false}]
-    },
+        "indent" : [
+            "error",
+            2
+        ],
 
         "linebreak-style": [
             "off"
@@ -35,3 +37,6 @@
       "Handlebars": false
     }
 }
+
+
+
