--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "test:js": "eslint src/js/",
         "test:scss": "stylelint src/sass/",
         "build": "npm-run-all build:* test",
-        "build:clean": "rimraf dist && mkdirp dist",
+        "build:clean": "mkdirp dist && rm -r dist && mkdirp dist",
         "build:copy": "copyfiles -a -u 1 -e \"**/sass/**/*\" -e \"**/.gitkeep\" \"src/**/*\" dist",
         "build:sass": "sass --style=compressed --no-source-map src/sass:dist/css",
         "build:autoprefixer": "postcss dist/css/*.css --use autoprefixer -d dist/css",
@@ -28,21 +28,20 @@
     "keywords": [],
     "author": "",
     "license": "ISC",
+    "dependencies": {
+        "json-server": "^0.15.1"
+    },
     "devDependencies": {
-        "autoprefixer": "^10.2.4",
-        "babel-eslint": "^10.1.0",
+        "autoprefixer-cli": "^1.0.0",
         "browser-sync": "^2.26.3",
         "copyfiles": "^2.1.0",
         "eslint": "^5.14.1",
         "globstar": "^1.0.0",
-        "html-validate": "^2.8.0",
         "mkdirp": "^0.5.1",
+        "node-sass": "^4.11.0",
         "npm-run-all": "^4.1.5",
+        "nu-html-checker": "^0.1.0",
         "onchange": "^5.2.0",
-        "postcss": "^8.2.6",
-        "postcss-cli": "^8.3.1",
-        "rimraf": "^3.0.2",
-        "sass": "^1.44.0",
         "stylelint": "^9.10.1",
         "stylelint-scss": "^3.5.4"
     }
