--- a/package.json
+++ b/package.json
@@ -28,23 +28,23 @@
     "keywords": [],
     "author": "",
     "license": "ISC",
+    "dependencies": {},
     "devDependencies": {
+        "rimraf": "^3.0.2",
         "autoprefixer": "^10.2.4",
-        "browser-sync": "^1.9.2",
+        "browser-sync": "^2.26.3",
         "copyfiles": "^2.1.0",
         "eslint": "^5.14.1",
         "globstar": "^1.0.0",
-        "html-validate": "^6.9.1",
         "mkdirp": "^0.5.1",
+        "node-sass": "^4.11.0",
         "npm-run-all": "^4.1.5",
-        "onchange": "^7.1.0",
+        "html-validate": "^2.8.0",
+        "onchange": "^5.2.0",
         "postcss": "^8.2.6",
         "postcss-cli": "^8.3.1",
-        "rimraf": "^3.0.2",
-        "stylelint": "^14.8.1",
+        "stylelint": "^09.10.1",
         "stylelint-scss": "^3.5.4"
-    },
-    "dependencies": {
-        "sass": "^1.51.0"
     }
 }
+
