--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
         "build": "npm-run-all build:* test",
         "build:clean": "rimraf dist && mkdirp dist",
         "build:copy": "copyfiles -a -u 1 -e \"**/sass/**/*\" -e \"**/.gitkeep\" \"src/**/*\" dist",
-        "build:sass": "node-sass --output-style compact -o dist/css src/sass",
+        "build:sass": "sass --style=compressed --no-source-map src/sass:dist/css",
         "build:autoprefixer": "postcss dist/css/*.css --use autoprefixer -d dist/css",
         "build-dev": "npm-run-all build-dev:sass build:autoprefixer",
-        "build-dev:sass": "node-sass --output-style expanded --source-map true -o dist/css src/sass",
+        "build-dev:sass": "sass --style=expanded --source-map src/sass:dist/css",
         "watch": "npm-run-all build build-dev -p watch:*",
         "watch:browsersync": "browser-sync start --server dist --files \"dist/**/*\"",
         "watch:sassprefixer": "onchange \"src/sass/**/*.scss\" -- npm run build-dev",
@@ -34,15 +34,15 @@
         "copyfiles": "^2.1.0",
         "eslint": "^5.14.1",
         "globstar": "^1.0.0",
-        "html-validate": "^6.9.1",
+        "html-validate": "^2.8.0",
         "mkdirp": "^0.5.1",
-        "node-sass": "^4.11.0",
         "npm-run-all": "^4.1.5",
-        "onchange": "^7.1.0",
+        "onchange": "^5.2.0",
         "postcss": "^8.2.6",
         "postcss-cli": "^8.3.1",
         "rimraf": "^3.0.2",
-        "stylelint": "^14.8.2",
+        "sass": "^1.44.0",
+        "stylelint": "^9.10.1",
         "stylelint-scss": "^3.5.4"
     }
 }
