--- a/src/db/app.json
+++ b/src/db/app.json
@@ -204,10 +204,10 @@
     ],
     "orders": [],
 
-    "events": [
+    "event": [
       {
         "id": 1,
-        "date": "2021-01-01",
+        "date": "2022-01-02",
         "hour": "12:30",
         "table": 1,
         "repeat": false,
@@ -217,7 +217,7 @@
       },
       {
         "id": 2,
-        "date": "2021-01-01",
+        "date": "2022-01-03",
         "hour": "16:00",
         "table": 3,
         "repeat": "daily",
@@ -227,7 +227,7 @@
       },
       {
         "id": 3,
-        "date": "2021-01-01",
+        "date": "2022-01-04",
         "hour": "12:00",
         "table": 3,
         "repeat": "daily",
@@ -237,7 +237,7 @@
       },
       {
         "id": 4,
-        "date": "2021-01-01",
+        "date": "2022-01-05",
         "hour": "13:00",
         "table": 2,
         "repeat": "daily",
@@ -247,7 +247,7 @@
       },
       {
         "id": 5,
-        "date": "2021-01-01",
+        "date": "2022-01-06",
         "hour": "18:00",
         "table": 2,
         "repeat": "daily",
@@ -256,5 +256,15 @@
         "starters": ["lemonWater"]
       }
     ],
-    "bookings": []
+    "booking": [
+      {
+         "id": 1,
+         "date": "2022-08-26",
+         "hour": "16:00",
+         "table": 1,
+         "duration": 3,
+         "ppl": 4,
+         "starters": ["water"]
+       }
+    ]
  }
